# A2A-Instabids-New

./: .dockerignore  .env.example  .env.txt  .gitignore  .gitmodules  Dockerfile  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETED.md  MULTI_AGENT_TEST_SUMMARY.md  PACKAGE.md  README  README UPDATED  README.md  SECRETS_CHECK.md  TESTING.md  TEST_STATUS.md  __cascade_debug_output__.VISIBLEDATA  cypress.config.js  debug_import.py  docker-compose.local.yml  docker-compose.yml  env_check.py  full_script_stdout.txt  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_homeowner_agent.py  test_imports.py  test_mem0.py  test_supabase.py  trigger.md  verify_production_readiness.py
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: BidCardPreview.stories.jsx
.venvGod/: pyvenv.cfg
Docs/: agent-interactions.md  implementation-plan.md
SYSTEM-PROMPT/: Agent-Flow-Refactor  Cross-Agent-Interaction
api/: main.py
db/: memory_schema_additions.sql  memory_schema_backup.sql  schema.sql
docs/: VISION_2.0.md  a2a_routing.md  api.md  bidcard_memory_integration.md  bidcard_v2.md  memory_integration.md  slot_filler.md  vision_integration.md
examples/: bid_card.json  memory_slot_filler_demo.py  vision_slot_filler_demo.py
frontend/: .env.local  .eslintrc.json  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
google/: __init__.py
instabids/: __init__.py  main.py
instabids_google/: __init__.py
is/: pyvenv.cfg
scripts/: apply_migrations.sh  fix_syntax.py  validate_bid_card.py  verify_env.py
(+276 files in other folders)
